Finalização de implentação do KPI Cobertura da Release